<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Taxi Place</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="zvalidations_not_positive_integer">Field should be positive integer</string>
    <string name="zvalidations_empty">Field could not be empty</string>
    <string name="zvalidations_not_in_range">Field should be between %1$d and %2$d</string>
    <string name="zvalidations_not_email">Value is not valid email address</string>
    <string name="title_activity_register">Register</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>My Account</item>
        <item>My Booking</item>
        <item>Refer &amp; Earn</item>
        <item>Offers &amp; Prootions</item>
        <item>Rate our App</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_pages</item>
        <item>@drawable/ic_whats_hot</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_search_city">SearchCity</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>

    <!-- Popular Cities -->
    <string name="popular1"> Hyderabad </string>
    <string name="popular2"> Vijayawada</string>
    <string name="popular3"> Vizag     </string>
    <string name="popular4"> Rajamundry</string>
    <string name="popular_cities"> Popular Cities</string>
    <string name="title_activity_caldroid">Caldroid</string>
    <string name="title_activity_search_taxi">SearchTaxi</string>

</resources>
