<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.onetaxi.taxiplace.SearchCity" >

     <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:cacheColorHint="#00000000"
        android:visibility="gone" />
    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/popular_cities" />

    <LinearLayout
        android:id="@+id/ll_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_card"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/ll_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="1" >

            <LinearLayout
                android:id="@+id/ll_popular1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:contentDescription="@string/popular_cities"
                    android:src="@android:drawable/btn_plus" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popular1"
                    android:id="@+id/tv_popolar1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_popular2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:contentDescription="@string/popular_cities"
                    android:src="@android:drawable/btn_plus" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popular2" 
                    android:id="@+id/tv_popolar2"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="1" >

            <LinearLayout
                android:id="@+id/ll_popular3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:contentDescription="@string/popular_cities"
                    android:src="@android:drawable/btn_plus" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popular3"
                    android:id="@+id/tv_popolar3" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_popular4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:contentDescription="@string/popular_cities"
                    android:src="@android:drawable/btn_plus" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popular4"
                    android:id="@+id/tv_popolar4" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>